--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 .container{
   position: relative;
   width: 450px;
-  height: 410px;
-  border: 3px solid #666666;
+  height: 450px;
+  border: 5px solid grey;
   margin: 30px auto;
-  border-radius: 5px;
-  background-color: #292727;
+  border-radius: 50px;
+  background-color: rgba(73, 141, 180, 0.74);
 }
 
 input[type="text"] {
     position: relative;
     display: block;
     width: 93%;
-    height: 35px;
+    height: 40px;
     margin-top:12px;
     margin-left:10px;
     margin-bottom: 12px;
     font-size: 30px;
     background-color: #cccccc;
-    border-radius: 15px;
+    border-radius: 50px;
   }
   
   input[type="button"] {
@@ -27,10 +27,11 @@ input[type="text"] {
     width: 20%;
     height: 50px;
     margin-left: 15px;
-    margin-top: 18px;
+    margin-top: 20px;
     font-size: 30px;
     font-weight: bold;
-    border-radius: 30px;
+    border-radius: 50px;
+    box-shadow: 5px white;
   }
   
   input[type="button"]:hover {
