--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+    background-image: url(https://mdn.mozillademos.org/files/11307/bubbles.png), linear-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0));
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
 div{
   position: relative;
   width: 450px;
@@ -37,3 +47,17 @@ input[type="text"] {
   input[type="button"]:hover {
     background-color: white;
   }
+
+  @media only screen and (max-width:500px){
+      div{
+          width: 350px;
+          margin-left: 40px;
+      }
+  }
+
+  @media only screen and (max-width:500px){
+    input[type="button"]{
+        width:18%;
+        padding-right:5px
+    }
+}
