--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 h1{
   font-size: 30px;
   text-align: center;
-  text-decoration: line-through white 1px;
   padding-top: -20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 div{
@@ -55,6 +55,19 @@ input[type="text"] {
     background-color: white;
   }
 
+  footer{
+    background: linear-gradient(to right, rgb(106, 141, 172), rgba(196, 190, 190, 0));
+    color: white;
+    position: sticky;
+    bottom: 0;
+    padding: 10px;
+    margin-right: -15px;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    opacity: .5;
+  }
+
   @media only screen and (max-width:500px){
       div{
           width: 350px;
@@ -67,4 +80,11 @@ input[type="text"] {
         width:18%;
         padding-right:5px
     }
+  }
+
+    @media only screen and (max-width:500px){
+      body {
+        width: 90%;
+        height: 95%;
+      }
 }
